agregando el chiste y las secciones que se me ocurren por ahora

--- a/Git/config.cfg
+++ b/Git/config.cfg
@@ -1,6 +1,6 @@
 [landslide]
-theme  = theme/
-source = slides/
+theme  = theme
+source = slides
 destination = index.html
 css = styles.css
 js = conf.js
