--- a/introduccion-git/config.cfg
+++ b/introduccion-git/config.cfg
@@ -1,7 +1,7 @@
 [landslide]
 ;theme  = default
 source = slides
-destination = index.html
+destination = index.pdf
 css = styles.css
 js = conf.js
 relative = True
